video section - version 3 // video fixes on firefox // header v2 fix

--- a/iptv-base-design/base/css/base-style.css
+++ b/iptv-base-design/base/css/base-style.css
@@ -427,6 +427,16 @@
         height: 100%;
     }
 
+    .read_more {
+        position: absolute;
+        bottom: 0;
+        right: 6px;
+        font-size: 10px;
+        text-transform: uppercase;
+        font-style: italic;
+        color: #707070;
+    }
+
     /*  BASE STRUCTURE #endregion */
     /* STARS #region */
     .stars_container,
